# Newclid

./: .buildinfo  .env  .gitignore  .pre-commit-config.yaml  NOTICE.md  README.rst  flake.nix  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_static/: documentation_options.js
docs/: README.md  conf.py  index.rst  reformat.py
manual/: adding_problems.html  adding_rules.html  overview.html  python_interface.html
ncdgen/: pyproject.toml
newclid/: README.rst  pyproject.toml
notebooks/: JGEX_problem.ipynb  geogebra_problem.ipynb  heuristics_implementation.ipynb  imo_2025.ipynb  multiple_JGEX_problems.ipynb
problems_datasets/: examples.txt
source/: geosolver.agent.agents_interface.html  geosolver.agent.breadth_first_search.html  geosolver.agent.flemmard.html  geosolver.agent.html  geosolver.agent.human_agent.html  geosolver.algebraic_reasoning.algebraic_manipulator.html  geosolver.algebraic_reasoning.html  geosolver.algebraic_reasoning.tables.html  geosolver.api.html  geosolver.configs.html  geosolver.dependencies.dependency.html  geosolver.dependencies.dependency_graph.html  geosolver.dependencies.html  geosolver.dependencies.symbols.html  geosolver.dependencies.symbols_graph.html  geosolver.formulations.clause.html  geosolver.formulations.definition.html  geosolver.formulations.html  geosolver.formulations.problem.html  geosolver.formulations.rule.html  geosolver.html  geosolver.load_geogebra.html  geosolver.match_theorems.html  geosolver.numerical.angles.html  geosolver.numerical.check.html  geosolver.numerical.distances.html  geosolver.numerical.draw_figure.html  geosolver.numerical.geometries.html  geosolver.numerical.html  geosolver.numerical.sketch.html  geosolver.predicates.Pythagoras.html  geosolver.predicates.circumcenter.html  geosolver.predicates.collinearity.html  geosolver.predicates.congruence.html  geosolver.predicates.constant_angle.html  geosolver.predicates.constant_length.html  geosolver.predicates.cyclic.html  (+19 more)
yuclid/: .clang-tidy  CMakeLists.txt  INSTALL.md  README.md  pyproject.toml  vcpkg.json
yuclid/cmake/: variables_map_contains.cpp  zip_transform.cpp
yuclid/python/py_yuclid/: omni_matcher.py  yuclid_adapter.py
yuclid/src/: CMakeLists.txt  config_options.cpp  config_options.hpp  main.cpp  matcher.cpp  matcher.hpp  problem.cpp  problem.hpp  theorem.cpp  theorem.hpp  typedef.hpp
yuclid/src/ar/: eqn_index.cpp  eqn_index.hpp  equation.cpp  equation.hpp  equation_traits.cpp  equation_traits.hpp  linear_combination.cpp  linear_combination.hpp  linear_system.cpp  linear_system.hpp  reduced_equation.cpp  reduced_equation.hpp
yuclid/src/numbers/: add_circle.cpp  add_circle.hpp  posreal.cpp  posreal.hpp  rat.hpp  rational.hpp  root_rat.cpp  root_rat.hpp  util.cpp  util.hpp
yuclid/src/parser/: simple-boost.cpp  simple.cpp  simple.hpp
yuclid/src/solver/: ddar_solver.cpp  ddar_solver.hpp  statement_proof.cpp  statement_proof.hpp  theorem_application.cpp  theorem_application.hpp
yuclid/src/statement/: angle_eq.cpp  angle_eq.hpp  circumcenter.cpp  circumcenter.hpp  coll.cpp  coll.hpp  cong.cpp  cong.hpp  congruent_triangles.cpp  congruent_triangles.hpp  cyclic.cpp  cyclic.hpp  diff_side.cpp  diff_side.hpp  dist_eq.cpp  dist_eq.hpp  eqn_statement.cpp  eqn_statement.hpp  eqratio.cpp  eqratio.hpp  equal_angles.cpp  equal_angles.hpp  equal_line_angles.cpp  equal_line_angles.hpp  factory.cpp  line_angle_eq.cpp  line_angle_eq.hpp  midpoint.cpp  midpoint.hpp  ncoll.cpp  ncoll.hpp  not_equal.cpp  not_equal.hpp  npara.cpp  npara.hpp  nperp.cpp  nperp.hpp  obtuse_angle.cpp  obtuse_angle.hpp  orthocenter.cpp  (+23 more)
yuclid/src/type/: angle.cpp  angle.hpp  dist.cpp  dist.hpp  named_point.hpp  point.cpp  point.hpp  sin_or_dist.cpp  sin_or_dist.hpp  slope_angle.cpp  slope_angle.hpp  squared_dist.cpp  squared_dist.hpp  triangle.cpp  triangle.hpp  variable_types.hpp
yuclid/test/: CMakeLists.txt  add_circle.cpp  additive.cpp  angle.cpp  dist.cpp  equation.cpp  imo_sl_20216_g6_constr.txt  int_sqrt.cpp  lhs.cpp  linear_combination.cpp  linear_system.cpp  point.cpp  problem.cpp  rat_sqrt.cpp  reduced_equation.cpp  root_rat.cpp  sin_or_dist.cpp  slope_angle.cpp  split_gist.py  squared_dist.cpp  util.cpp
yuclid/test/no_crash/: cong_hotfix.txt  geoex-246-gist1_1.txt  geoex-246-gist1_11.txt  geoex-246-gist1_14.txt  geoex-246-gist1_16.txt  geoex-246-gist1_17.txt  geoex-246-gist1_4.txt  geoex-246-gist1_6.txt  geoex-246-gist1_8.txt  geoex-246-gist1_9.txt  mult_overflow.txt  ncinfer.txt
yuclid/test/ratio_only/: circumcenter.txt  data_gen_failure_1.txt  dcgen_numerical_failure.txt  dcgen_numerical_failure_2.txt  dcgen_other_failure.txt  r00_perpendiculars_give_parallel.txt  r01_definition_of_cyclic.txt  r02_parallel_from_inclination.txt  r03_arc_determines_internal_angles.txt  r04_congruent_angles_are_in_a_cyclic.txt  r05_same_arc_same_chord.txt  r06_base_of_half_triangle.txt  r07_thales_theorem_1.txt  r08_right_triangles_common_angle_1.txt  r09_sum_of_angles_of_a_triangle.txt  r10_ratio_cancellation.txt  r11_bisector_theorem_1.txt  r12_bisector_theorem_2.txt  r13_isosceles_triangle_equal_angles.txt  r14_equal_base_angles_imply_isosceles.txt  r15_arc_determines_inscribed_angle_tangent.txt  r16_same_arc_giving_tangent.txt  r17_central_angle_vs_inscribed_angle_1.txt  r18_central_angle_vs_inscribed_angle_2.txt  r19_hypothenuse_is_diameter.txt  r20_diameter_is_hypothenuse.txt  r21_cyclic_trapezoid.txt  r22_bisector_construction.txt  r23_bisector_is_perpendicular.txt  r24_cyclic_kite.txt  r25_diagonals_of_parallelogram.txt  r26_diagonals_of_parallelogram_2.txt  r27_thales_theorem_2.txt  r28_overlapping_parallels.txt  r29_midpoint_is_an_eqratio.txt  r30_right_angles_common_angle_2.txt  r31_denominator_cancelling.txt  r34_aa_similarity_of_triangles_direct.txt  r35_aa_similarity_of_triangles_reverse.txt  r36_asa_congruence_of_triangles_direct.txt  (+38 more)
yuclid/test/simple/: menelaus.txt  triangle_bisector_back.txt  triangle_bisector_forward.txt
(+164 files in other folders)
